--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
         "react-div-100vh": "^0.7.0",
         "react-dom": "17.0.2",
         "react-query": "^3.38.1",
-        "serverless-cloud-data-utils": "0.3.0",
+        "serverless-cloud-data-utils": "^0.3.4",
         "slugify": "^1.6.5",
         "snakecase-keys": "^5.4.2",
         "type-fest": "^2.12.2",
@@ -63,6 +63,7 @@
         "@types/jest": "^27.5.0",
         "@types/node": "17.0.21",
         "@types/react": "17.0.40",
+        "@types/react-beautiful-dnd": "^13.1.2",
         "eslint": "8.11.0",
         "eslint-config-next": "12.1.0",
         "jest": "^28.0.3",
