ralation and invite updates

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,7 +48,8 @@
         "**/*.ts",
         "**/*.tsx",
         "components/project/project-create/project-create-button/index.tss",
-        "lib/organisation/tests/api.test.disabled"
+        "lib/organisation/tests/api.test.disabled",
+        "middleware.unused"
     ],
     "exclude": ["node_modules"]
 }
