--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "pluralize": "^8.0.0",
         "react": "^17.0.2",
         "react-alice-carousel": "^2.6.4",
+        "react-avatar-editor": "^13.0.0",
         "react-beautiful-dnd": "^13.1.0",
         "react-div-100vh": "^0.7.0",
         "react-dom": "17.0.2",
@@ -92,6 +93,7 @@
         "@types/mime-types": "^2.1.1",
         "@types/node": "^17.0.29",
         "@types/react": "18.0.15",
+        "@types/react-avatar-editor": "^13.0.0",
         "@types/react-beautiful-dnd": "^13.1.2",
         "@types/sharp": "^0.30.4",
         "@types/tinycolor2": "^1.4.3",
