--- a/package.json
+++ b/package.json
@@ -59,17 +59,17 @@
         "jotai": "^1.7.6",
         "jsonwebtoken": "^8.5.1",
         "mime-types": "^2.1.35",
-        "next": "12.2.0",
+        "next": "^13.0.0",
         "oso-cloud": "^0.8.3",
         "pluralize": "^8.0.0",
         "proxy-memoize": "^1.2.0",
         "radash": "^7.1.0",
-        "react": "^17.0.2",
+        "react": "^18.2.0",
         "react-alice-carousel": "^2.6.4",
         "react-avatar-editor": "^13.0.0",
         "react-beautiful-dnd": "^13.1.0",
         "react-div-100vh": "^0.7.0",
-        "react-dom": "17.0.2",
+        "react-dom": "^18.2.0",
         "react-hook-form": "^7.33.1",
         "react-query": "^3.39.2",
         "react-use-measure": "^2.1.1",
@@ -105,7 +105,7 @@
         "@types/tinycolor2": "^1.4.3",
         "@types/ungap__structured-clone": "^0.3.0",
         "eslint": "8.20.0",
-        "eslint-config-next": "^12.2.3",
+        "eslint-config-next": "^13.0.0",
         "jest": "^28.1.3",
         "prettier": "2.7.1",
         "swr": "^1.3.0",
