--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
         "@auth0/nextjs-auth0": "^1.9.1",
         "@emotion/react": "^11.9.3",
         "@emotion/server": "^11.4.0",
-        "@fortawesome/fontawesome-svg-core": "^6.1.2",
-        "@fortawesome/free-solid-svg-icons": "^6.1.2",
-        "@fortawesome/pro-duotone-svg-icons": "^6.1.2",
-        "@fortawesome/pro-light-svg-icons": "^6.1.2",
-        "@fortawesome/pro-regular-svg-icons": "^6.1.2",
-        "@fortawesome/pro-solid-svg-icons": "^6.1.2",
+        "@fortawesome/fontawesome-svg-core": "^6.2.0",
+        "@fortawesome/free-solid-svg-icons": "^6.2.0",
+        "@fortawesome/pro-duotone-svg-icons": "^6.2.0",
+        "@fortawesome/pro-light-svg-icons": "^6.2.0",
+        "@fortawesome/pro-regular-svg-icons": "^6.2.0",
+        "@fortawesome/pro-solid-svg-icons": "^6.2.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@hammo92/serverless-cloud-data-utils": "^0.3.6",
         "@hookform/devtools": "^4.2.2",
@@ -80,6 +80,7 @@
         "snake-case": "^3.0.4",
         "snakecase-keys": "^5.4.2",
         "swiper": "^8.3.2",
+        "tiny-invariant": "^1.3.1",
         "tinycolor2": "^1.4.2",
         "type-fest": "^2.17.0",
         "ulid": "^2.3.0",
