--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
         "jsonwebtoken": "^8.5.1",
         "jwks-rsa": "^3.0.0",
         "jwt-decode": "^3.1.2",
+        "leaflet": "^1.9.3",
         "mime-types": "^2.1.35",
         "next": "^13.0.5",
         "next-http-proxy-middleware": "^1.2.5",
@@ -101,6 +102,7 @@
         "react-div-100vh": "^0.7.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.33.1",
+        "react-leaflet": "^4.2.0",
         "react-pdf": "^6.2.0",
         "react-query": "^3.39.2",
         "react-use-measure": "^2.1.1",
@@ -130,6 +132,7 @@
         "@types/cors": "^2.8.12",
         "@types/debounce": "^1.2.1",
         "@types/jest": "^28.1.6",
+        "@types/leaflet": "^1.9.0",
         "@types/mime-types": "^2.1.1",
         "@types/node": "^17.0.29",
         "@types/react": "18.0.15",
